Keep logo at fixed height, even on small screens.

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -59,8 +59,8 @@ ul.right{
 // }
 
 .name,.title{
-  max-width:190px;
   a {background-color:transparent !important;}
+  img { height: 40px; }
 }
 
 .left-off-canvas-menu{
